--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Analitica Acessória",
   "icons": [
     {
-      "src": "/img/icons-512.png",
+      "src": "img/icons-512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
